--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -1,15 +1,15 @@
 # English translations for PROJECT.
 # Copyright (C) 2024 ORGANIZATION
-# This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# This file is distributed under the same license as the SIMPLE TRANSLATION project.
+# JEREMIAH AKOR <OMOAKOR@GMAIL.COM>, 2024.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"Report-Msgid-Bugs-To: OMOAKOR@GMAIL.COM\n"
 "POT-Creation-Date: 2024-11-10 12:48+0000\n"
 "PO-Revision-Date: 2024-11-09 22:20+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: JEREMIAH AKOR <OMOAKOR@GMAIL.COM>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
